# ACDtools

./: .gitattributes  .pre-commit-config.yaml  README.md  config.yaml  job_config.yaml  pyproject.toml  setup.py
.conda/: meta.yaml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
ACDtools/: __init__.py  ard.py  make_data.py  mhw.py  ocean.py  plot.py  util.py
ci/: environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml
examples/: validate_chunkspec.ipynb
notebooks/: NC2zarr_workflow_n3.ipynb  acdtools-I14-util-demo.ipynb  acdtools-I18-heatmap.ipynb  acdtools-dev-sandbox.ipynb  file_type_issue_n2.ipynb  load_ACCESS_ESM15_data_n1.ipynb
notebooks/ARD_workflow_2025/: ACCESS-ESM15-rechunk-zarr.ipynb  ACCESS-ESM15-write-zarr.ipynb
src/access_intake_utils/: __init__.py  _version.py  ard.py  make_data.py  ocean.py  plot.py  util.py
src/access_intake_utils/chunking/: _chunking.py
tests/: __init__.py  conftest.py  test_chunking.py
