[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ACDtools"
version = "0.01"
description = "ACDtools - Australian Climate Data Tools"
authors = [{name = "Thomas-Moore-Creative", email = "thomas.moore@csiro.au"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["ACDtools*"]
exclude = ["notebooks", "tests"]